src/css/app.css
#root
{
	min-height: 100vh;
	font-family: var(--sans-serif);
}

.code
{
	font-family: var(--monospace);
}

.app{
	text-align: center;
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	flex-wrap: nowrap;
	align-items: center;
	justify-content: space-between;
}

.view
{
	width: 84%;
	max-width: 10in;
	margin-bottom: 60px;
}

.atf 
{
	min-height: 40vh;
	display: flex;
	flex-direction: column;
	flex-wrap: nowrap;
	align-items: center;
	justify-content: center;
}

@media only screen and (min-width: 600px)
{
	.view
	{
		margin-bottom: 70px;
	}

	.atf 
	{
		min-height: 50vh;
	}
}

.app-logo
{
	width: 200px;
	padding: 20px 40px 10px 40px;
}

.icon
{
	width: 25px;
	height: 25px;
}

.wide-icon
{
	height: 25px;
}

.button .wide-icon
{
	margin-bottom: -4px;
}

button
{
	outline: none;
	border: none;
	padding: 10px 30px;
	cursor: pointer;
	border-radius: 2px;
}

.button
{
	display: inline-block;
	align-items: center;
	justify-content: center;
	outline: none;
	border: none;
	padding: 10px 30px;
	cursor: pointer;
	border-radius: 2px;
}

.clickable
{
	cursor: pointer;
}

.clickable:active
{
	opacity: .9;
}

.main-footer
{
	display: block;
	text-align: center;
	width: 100%;
	padding: 8pt;
}

.legal-text
{
	font-size: 10pt;
	font-weight: bold;
	text-align: center;
}

.toggle-theme
{
	width: 70px;
	height: 70px;
}

@media only screen and (min-width: 600px)
{
	.app-logo
	{
		width: 300px;
		padding: 35px 70px 10px 70px;
	}

	.icon
	{
		width: 30px;
		height: 30px;
	}

	.toggle-theme
	{
		width: 100px;
		height: 100px;
	}
}

@media only screen and (min-width: 998px)
{
	.app-logo
	{
		width: 400px;
		padding: 40px 80px 10px 80px;
	}

	.icon
	{
		width: 40px;
		height: 40px;
	}
}

@media only screen and (min-width: 2500px)
{
	.app-logo
	{
		width: 800px;
		padding: 80px 160px 20px 160px;
	}
}

.code-and-output
{
	display: flex;
	flex-direction: column;
	flex-wrap: nowrap;
	justify-content: center;
	width: 100%;
}

.code-block
{
	padding: 10px 20px;
	margin: 20px 0 0 0;
	border-radius: 10px;
	overflow: scroll;
	max-width: 100%;
	max-height: 26em;
	flex-grow: 2;
}

.code-block > p, 
.code-block > p > span
{
	font-family: var(--monospace);
}

.code-output
{
	flex-grow: 0;
	border-radius: 0 0 10px 10px;
	margin: 0 0 20px;
	padding: 10px 20px;
}

.code-output > p
{
	font-family: var(--monospace);
}

.code-output p::before
{
	content: ">> ";
}

.code-block::-webkit-scrollbar
{
	height: 10px;
	width: 10px;
}

.code-block::-webkit-scrollbar-track
{
	display: none;
}

.code-block::-webkit-scrollbar-thumb
{
	border-radius: 10px;
	background: rgba(125, 125, 125, .2);
}

.code-block::-webkit-scrollbar-corner
{
	display: none;
}

.code-example .code-block
{
	border-radius: 10px 10px 0 0;
	padding-top: 20px;
	padding-bottom: 20px;
}

.code-block p
{
	margin: 0;
	font-weight: bold;
	white-space: nowrap;
}

.two-column
{
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	gap: 0;
}

.two-column > *
{
	width: 100%;
}

@media only screen and (min-width: 998px)
{
	.code-and-output
	{
		flex-direction: row;
	}

	.code-block
	{
		overscroll-behavior: contain;
		margin: 20px 0 0 0;
	}

	.code-output
	{
		width: 20em;
		margin: 20px 0 0 0;
		border-radius: 0 10px 10px 0;
	}

	.two-column
	{
		gap: 2%;
	}

	.two-column > *
	{
		width: 48%;
	}

	.code-example .code-block
	{
		border-radius: 10px 0 0 10px;
	}
}

.wide 
{
	width: 100%;
	text-align: center;
	margin: 75px 0;
}

